Kyverno/Task2(Enforcing Image Registries)/policy.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: Enforce
  rules:
    - name: validate-image-registry
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only images from docker.io are allowed."
        pattern:
          spec:
            containers:
              - image: "docker.io/*"
